# better-anonymity

./: -o  .gitignore  MANIFEST.in  README.md  SECURITY.md  add_baselines.py  add_custom_rules.py  add_missing_defaults.py  add_ssh_rules.py  check_existing.py  compare_configs.py  debug_airport_path.sh  debug_firewall.sh  debug_ssh_check.sh  found_defaults.txt  generate_custom_osx_config.py  inject_all_defaults.py  inject_service_rules.py  install_hjson.sh  privacy-script.sh  run_tests.sh  setup.cfg  setup.py  test_compare.py  test_setup.py
.github/: dependabot.yml
Formula/: better-anonymity.rb
better_anonymity/: __init__.py  __main__.py
completions/: _better-anonymity
config/: example.osx-config.hjson  example.osx-config.json  hosts  settings.json
docs/: BACKUP.md  BROWSER.md  COMMANDS.md  FIREFOX.md  GPG.md  I2P.md  MESSENGERS.md  METADATA.md  MISC.md  NETWORK.md  ONIONSHARE.md  OS_HARDENING.md  PASSWORD.md  PASSWORDS.md  PRIVOXY.md  PUBLISHING.md  SSH.md  TOR.md  TOR_SERVICE.md  USAGE.md  WIFI.md  WORKFLOWS.md
lib/: backup.sh  banner.txt  browser_hardening.sh  captive.sh  checks.sh  cleanup.sh  core.sh  diagnosis.sh  firewall.sh  i2p_manager.sh  installers.sh  lifecycle.sh  macos_hardening.sh  menus.sh  network.sh  password_utils.sh  platform.sh  ssh.sh  tor_manager.sh  vault.sh  wifi.sh
tests/: active_network_test.sh  integration_cli.sh  run_tests.sh  test_framework.sh  test_telegram.sh  unit_core.sh  unit_diagnosis.sh  unit_hardening_prompts.sh  unit_logic.sh  unit_menus.sh  unit_network.sh  unit_onionshare.sh  unit_optimizations.sh  unit_password.sh  (+10 more)
(+16 files in other folders)
