[metadata]
name = better-anonymity
version = 1.0.2
description = macOS hardening, privacy & anonymity CLI (Python shim)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnpatrickroach/better-anonymity
author = Your Name
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True
[options.package_data]
* = bin/* lib/* config/*

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    better-anonymity = better_anonymity:main
    better-anon = better_anonymity:main
    b-a = better_anonymity:main

